--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
+    "@notionhq/client": "^1.0.4",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.0"
   },
   "devDependencies": {},
